--- a/labs/06 - Clustering/Exercises/exercise_clustering.ipynb
+++ b/labs/06 - Clustering/Exercises/exercise_clustering.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_ETzaK1xJI-p"
+        "id": "Q8knoEHjqKj4"
       },
       "source": [
         "<a target=\"_blank\" href=\"https://colab.research.google.com/github/michalis0/Business-Intelligence-and-Analytics/blob/master/labs/06%20-%20Clustering/Exercises/exercise_clustering.ipynb\">\n",
@@ -38,9 +38,77 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SsP1gBXlCatI"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "SsP1gBXlCatI",
+        "outputId": "5b97fb4f-ee9a-494f-c983-b27d995a1d0b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Grades</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>73.07</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>76.39</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.56</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>18.49</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>60.04</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Grades\n",
+              "0   73.07\n",
+              "1   76.39\n",
+              "2    1.56\n",
+              "3   18.49\n",
+              "4   60.04"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -54,7 +122,8 @@
         "\n",
         "grades = pd.read_csv(url)\n",
         "\n",
-        "grades.head()"
+        "grades.head()\n",
+        "grades.info()"
       ]
     },
     {
@@ -73,7 +142,9 @@
         "id": "hfc9Vj1YFcxn"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# YOUR CODE HERE"
+      ]
     },
     {
       "cell_type": "markdown",
